[package]
name = "nature-remo"
version = "0.1.0"
authors = ["Yasuaki Uechi <y@uechi.io>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = "0.9.20"
url = "2.1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.40"
